feat: add account deletion api
